# d3js_demo_web

./: Docker-compose.yml  README.md
d3-nextjs/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
d3-nextjs/app/: ColorList.js  Loading.js  globals.css  layout.js  page.js
d3-nextjs/app/AllFilmYearAnalysis/: AllFilmYearAnalysis.js  AllFilmYearBrush.js  AllFilmYearLineChart.js  test.js
d3-nextjs/app/Covid19Analysis/: Covid19Analysis.js  Covid19ChooseType.js  Covid19HeatChart.css  Covid19HeatChart.js  Covid19HeatChartV1.js  Covid19ZoomTool.js
d3-nextjs/app/FilmPlatformAnalysis/: FilmPlatformAnalysis.js  FilmPlatformBarChart.js  FilmPlatformPieChart.css  FilmPlatformPieChart.js
d3-nextjs/app/FilmYearAnalysis/: FilmYearAnalysis.js  FilmYearChart.js  FilmYearSearch.js
d3-nextjs/public/: flimbackup.js  flimbackupold.js
d3_fastapi/: Dockerfile  pyproject.toml
d3_fastapi/src/app/: main.py
d3_fastapi/src/app/components/covid19/: full_grouped.csv
d3_fastapi/src/app/controllers/: CovidController.py  EccKeyController.py  MovieController.py
